...

      <GBottomBar>
        <GButton
          fullWidth
          label={t('booking.confirmation.done')}
          onPress={done}
          testID="booking-done"
        />
      </GBottomBar>
    </GScreen>
  );
}

...
