...
            />
          ))}
        </Menu>
      }
      search={
        <GSearchBar
          testID="find-search-input"
          placeholder={t('find.searchPlaceholder')}
          value={search}
          onChangeText={onChangeSearch}
        />
      }
      filters={
...
